[gd_scene load_steps=4 format=2]

[ext_resource path="res://SS_Broken .gd" type="Script" id=1]
[ext_resource path="res://Spaceship/asset/SS_Broken.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 60, 40 )

[node name="SS_Broken " type="Area2D"]
script = ExtResource( 1 )

[node name="SS_Broken" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Timer" type="Timer" parent="SS_Broken"]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_SS_Broken__body_entered"]
[connection signal="timeout" from="SS_Broken/Timer" to="." method="_on_Timer_timeout"]
